# Xpilot

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
debug/stm32f4/: cmsis-dap-swd.cfg
doc/: degin.dio
doc/madgwick_algorithm_c/: ._MadgwickAHRS
doc/madgwick_algorithm_c/MadgwickAHRS/: ._MadgwickAHRS.c  ._MadgwickAHRS.h
doc/madgwick_algorithm_c/MahonyAHRS/: ._MahonyAHRS.c  ._MahonyAHRS.h
src/: fsm.rs  main.rs  mbus.rs  message.rs
src/acs/: adrc.rs  heli.rs  imu.rs  mod.rs  pid.rs
src/acs/filter/: ahrs.rs  dither.rs  ekf.rs  eskf.rs  first_order.rs  iir_filter.rs  jitter_filter.rs  klf.rs  limiting.rs  limiting_dither.rs  limiting_mean_values.rs  lkf.rs  low_pass.rs  mean.rs  mean_value.rs  mod.rs  moving_average.rs  ukf.rs  weighted_moving_average.rs
src/app/: anotc.rs  controller.rs  imu.rs  led.rs  mavlink.rs  mod.rs  mpu_dmp.rs  msp.rs  osd.rs  pwm_led.rs  station_anotc.rs
src/driver/: bldc.rs  led.rs  mod.rs  mpu6050.rs  mpu9250.rs  rcu.rs  servo.rs  stdout.rs
src/driver/gd32vf103/: bldc.rs  led.rs  mod.rs  mpu6050.rs  mpu6050_dmp.rs  pwm.rs  rcu.rs  serial.rs  servo.rs  stdout.rs
src/driver/stm32f4/: icm20602.rs  led.rs  memory-401.x  memory-411.x  memory-427.x  mod.rs  mpu6050.rs  mpu6050_dmp.rs  mpu9250.rs  nvic.rs  sbus.rs  serial.rs  telem.rs
src/driver/stm32f401ccu6/: led.rs  mod.rs  mpu6050.rs  mpu6050_dmp.rs
src/driver/stm32f411ccu6/: mod.rs  mpu6050_dmp.rs
src/drone/: helix.rs  mod.rs
src/filter/: dither.rs  first_order.rs  limiting.rs  limiting_dither.rs  limiting_mean_values.rs  low_pass.rs  mean_mean.rs  moving_average.rs  weighted_moving_average.rs
