[package]
edition = "2021"
name = "xpilot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "1.0.0"
bit_field = "0.10.1"
crossbeam = {version = "0.8.1", default-features = false, features = ["alloc"]}
drogue-esp8266 = "0.3.1"
embedded-hal = "0.2.3"
# gd32vf103xx-hal = "0.5.0"
cast = {version = "0.2.3", default-features = false}
heapless = "0.7"
icm20689 = {git = "https://github.com/tstellanova/icm20689"}
lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"]}
libm = "0.2.2"
log = "0.4.17"
mpu6050 = "0.1.5"
mpu6050-dmp = {git = "https://github.com/gqf2008/mpu6050-dmp-rs"}
nalgebra = {version = "0.24.1", default-features = false}
nb = "1.0.0"
profont = "0.6.1"
spin = "0.9.3"
xtask = {path = "../xtask"}
