[package]
edition = "2021"
name = "xpilot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# 默认
default = ["stm32f401ccu6"]
# gd32vf103
gd32vf103 = []
# stm32f401ccu6
stm32f401ccu6 = []
# stm32f427vit6
stm32f427vit6 = []
#dmp
dmp = []

[dependencies]
bare-metal = "1.0.0"
bit_field = "0.10.1"
cast = {version = "0.2.3", default-features = false}
crossbeam = {version = "0.8.1", default-features = false, features = ["alloc"]}
drogue-esp8266 = "0.3.1"
embedded-hal = "0.2.3"
heapless = "0.7"
icm20689 = {git = "https://github.com/tstellanova/icm20689"}
lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"]}
libm = "0.2.2"
log = "0.4.17"
mavlink = {version = "0.10.1", default-features = false, features = ["embedded", "all-dialects"]}
mpu6050 = "0.1.5"
mpu6050-dmp = {git = "https://github.com/gqf2008/mpu6050-dmp-rs"}
mpu9250 = {version = "0.24.0", features = ["i2c", "dmp"]}
nalgebra = {version = "0.24.1", default-features = false}
nb = "1.0.0"
pid = "3.0.0"
profont = "0.6.1"
shared-bus = "0.2.3"
spin = "0.9.3"
xtask = {path = "../xtask", features = ["stm32f4"]}
# panic-probe = { version = "0.3", features = ["print-rtt"] }
# rtt-target = { version = "0.3.1",features = ["cortex-m"]}
